Custom--app/main/default/objects/Submarket_Assignment_Defaults__c/Submarket_Assignment_Defaults__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Submarket assignments for new properties</description>
    <label>Submarket Assignment Defaults</label>
</CustomObject>