Custom--app/main/default/objects/Submarket_Assignment_Defaults__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>